Fixes alignment on Plan component

--- a/src/components/MainContent/SelectingPlan/Plan/Plan.module.css
+++ b/src/components/MainContent/SelectingPlan/Plan/Plan.module.css
@@ -1,6 +1,7 @@
 .plan {
   padding: 1rem;
   display: flex;
+  align-items: center;
   gap: 1rem;
   border: 1px solid var(--color-light-gray);
   cursor: pointer;
@@ -42,5 +43,6 @@
     flex-direction: column;
     gap: 2.5rem;
     justify-content: space-between;
+    align-items: flex-start;
   }
 }
